# MBcord

./: Cargo.toml
src/: main.rs
src/commands/: Readme.md  join.rs  leave.rs  mod.rs  play.rs
src/handlers/: event_handler.rs  mod.rs
src/services/: spotifly.rs  youtube.rs
