[package]
name = "MBcord"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rspotify = "0.13.2"
serde = { version = "1.0.204", features = ["derive"] }
serenity = "0.12.2"
songbird = { version = "0.4.3", features = ["builtin-queue"] }
tokio = { version = "1.39.1", features = ["full", "macros", "rt-multi-thread"] }
